moving to git diff-tree, moving to java8 streams, additional refactoring