@@ -1,28 +1,29 @@
 package org.christiangalsterer.stash.filehooks.plugin.hook;
 
-import com.atlassian.fugue.Pair;
-import com.atlassian.bitbucket.content.*;
 import com.atlassian.bitbucket.hook.HookResponse;
 import com.atlassian.bitbucket.hook.repository.PreReceiveRepositoryHook;
 import com.atlassian.bitbucket.hook.repository.RepositoryHookContext;
+import com.atlassian.bitbucket.io.LineInputHandler;
 import com.atlassian.bitbucket.repository.RefChange;
 import com.atlassian.bitbucket.repository.Repository;
-import com.atlassian.bitbucket.scm.Command;
+import com.atlassian.bitbucket.scm.CommandInputHandler;
 import com.atlassian.bitbucket.scm.PluginCommandBuilderFactory;
 import com.atlassian.bitbucket.scm.git.command.GitCommandBuilderFactory;
 import com.atlassian.bitbucket.setting.Settings;
-import com.google.common.base.Function;
-import com.google.common.base.Predicates;
-import com.google.common.collect.*;
+import com.atlassian.fugue.Pair;
 
 import javax.annotation.Nonnull;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+import java.util.stream.StreamSupport;
 
-import static com.google.common.base.Functions.compose;
-import static com.google.common.collect.Iterables.addAll;
-import static com.google.common.collect.Iterables.filter;
-import static com.google.common.collect.Iterables.transform;
 import static org.christiangalsterer.stash.filehooks.plugin.hook.Predicates.*;
 
 /**
@@ -36,48 +37,52 @@ public class FileSizeHook implements PreReceiveRepositoryHook {
     private static final String SETTINGS_SIZE_PREFIX = "size-";
     private static final String SETTINGS_BRANCHES_PATTERN_PREFIX = "pattern-branches-";
 
-    private final ChangesetService changesetService;
+    private final DiffTreeService diffTreeService;
     private final PluginCommandBuilderFactory commandFactory;
 
-    public FileSizeHook(ChangesetService changesetService, GitCommandBuilderFactory commandFactory) {
-        this.changesetService = changesetService;
+    public FileSizeHook(DiffTreeService diffTreeService, GitCommandBuilderFactory commandFactory) {
+        this.diffTreeService = diffTreeService;
         this.commandFactory = commandFactory;
     }
 
     @Override
-    public boolean onReceive(@Nonnull RepositoryHookContext context, @Nonnull Collection<RefChange> refChanges, @Nonnull HookResponse hookResponse) {
+    public boolean onReceive(@Nonnull RepositoryHookContext context, @Nonnull Collection<RefChange> refChanges,
+        @Nonnull HookResponse hookResponse) {
         Repository repository = context.getRepository();
         List<FileSizeHookSetting> settings = getSettings(context.getSettings());
-        Optional<Pattern> branchesPattern = Optional.empty();
+        Optional<Pattern> branchesPattern;
 
-        Map<Long, Collection<String>> pathAndSizes = new HashMap<Long, Collection<String>>();
+        Map<Long, Collection<String>> pathAndSizes = new HashMap<>();
 
         for (FileSizeHookSetting setting : settings) {
-            Collection<String> paths = new ArrayList<String>();
-            Pattern includePattern = setting.getIncludePattern();
             Long maxFileSize = setting.getSize();
             branchesPattern = setting.getBranchesPattern();
 
-            Collection<RefChange> filteredRefChanges = FluentIterable.from(refChanges)
-                    .filter(isNotDeleteRefChange)
-                    .filter(isNotTagRefChange)
-                    .toList();
-
-            if(branchesPattern.isPresent()) {
-                filteredRefChanges = Collections2.filter(filteredRefChanges, filterBranchesPredicate(branchesPattern.get()));
+            Collection<RefChange> filteredRefChanges;
+            if (branchesPattern.isPresent()) {
+                filteredRefChanges = refChanges.stream().filter(REF_CHANGE_NOT_DELETED).filter(REF_CHANGE_IS_NOT_TAG)
+                    .filter(filterBranchesPredicate(branchesPattern.get())).collect(Collectors.toList());
+            } else {
+                filteredRefChanges = refChanges.stream().filter(REF_CHANGE_NOT_DELETED).filter(REF_CHANGE_IS_NOT_TAG)
+                    .collect(Collectors.toList());
             }
 
-            Iterable<String> filteredPaths = filter((Multimaps.index(
-                    filter(getChanges(repository, filteredRefChanges),
-                            Predicates.compose(Range.greaterThan(maxFileSize), Pair.<Long>rightValue())),
-                            compose(Functions.CHANGE_TO_PATH, Pair.<Change>leftValue())).keySet()), Predicates.contains(includePattern));
+            Iterable<Pair<String, String>> changedFiles = diffTreeService.getChangedFiles(filteredRefChanges, repository);
 
-            if (setting.getExcludePattern().isPresent())
-                filteredPaths = filter(filteredPaths, Predicates.not(Predicates.contains(setting.getExcludePattern().get())));
+            final Collection<Pair<String, String>> filteredChangedFiles;
+            if (setting.getExcludePattern().isPresent()) {
+                filteredChangedFiles = StreamSupport.stream(changedFiles.spliterator(), false)
+                    .filter(p -> setting.getIncludePattern().matcher(p.right()).matches())
+                    .filter(p -> !setting.getExcludePattern().get().matcher(p.right()).matches())
+                    .collect(Collectors.toList());
+            } else {
+                filteredChangedFiles = StreamSupport.stream(changedFiles.spliterator(), false)
+                    .filter(p -> setting.getIncludePattern().matcher(p.right()).matches()).collect(Collectors.toList());
+            }
 
-            addAll(paths, filteredPaths);
-            pathAndSizes.put(maxFileSize, paths);
-         }
+            Collection<String> violatingPaths = getChanges(filteredChangedFiles, maxFileSize, repository);
+            pathAndSizes.put(maxFileSize, violatingPaths);
+        }
 
         boolean hookPassed = true;
 
@@ -87,13 +92,33 @@ public class FileSizeHook implements PreReceiveRepositoryHook {
                 hookPassed = false;
                 hookResponse.out().println("=================================");
                 for (String path : paths) {
-                    hookResponse.out().println(String.format("File [%s] is too large. Maximum allowed file size is %s bytes.", path, maxFileSize));
+                    hookResponse.out().println(
+                        String.format("File [%s] is too large. Maximum allowed file size is %s bytes.", path, maxFileSize));
                 }
                 hookResponse.out().println("=================================");
             }
         }
 
         return hookPassed;
+    }
+
+    private Collection<String> getChanges(Collection<Pair<String, String>> changedFiles, Long maxFileSize,
+        Repository repository) {
+        CommandInputHandler inputHandler =
+            new LineInputHandler(changedFiles.stream().map(cf -> cf.left()).collect(Collectors.toList()));
+        CatFileBatchCheckHandler handler = new CatFileBatchCheckHandler();
+        Collection<Pair<String, Long>> catFileResult =
+            commandFactory.builder(repository).command("cat-file").argument("--batch-check").inputHandler(inputHandler)
+                .build(handler).call();
+        Collection<String> sizeExceedingHashes =
+            catFileResult.stream().filter(r -> r.right() > maxFileSize).map(Pair::left).collect(Collectors.toList());
+
+        if (sizeExceedingHashes.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        return changedFiles.stream().filter(f -> sizeExceedingHashes.contains(f.left())).map(Pair::right)
+            .collect(Collectors.toList());
     }
 
     private List<FileSizeHookSetting> getSettings(Settings settings) {
@@ -103,7 +128,7 @@ public class FileSizeHook implements PreReceiveRepositoryHook {
         String excludeRegex;
         String branchesRegex;
 
-        for (int i = 1; i <= MAX_SETTINGS ; i++) {
+        for (int i = 1; i <= MAX_SETTINGS; i++) {
             includeRegex = settings.getString(SETTINGS_INCLUDE_PATTERN_PREFIX + i);
             if (includeRegex != null) {
                 excludeRegex = settings.getString(SETTINGS_EXCLUDE_PATTERN_PREFIX + i);
@@ -116,24 +141,4 @@ public class FileSizeHook implements PreReceiveRepositoryHook {
         return configurations;
     }
 
-    private Iterable<Pair<Change, Long>> getChanges(Repository repository, Iterable<RefChange> refChanges) {
-        return zipWithSize(filter(Iterables.concat(changesetService.getChanges(refChanges, repository)), isNotDeleteChange), repository);
-    }
-
-    private Iterable<Pair<Change, Long>> zipWithSize(Iterable<Change> changes, Repository repository) {
-        // TODO We really shouldn't need a multimap
-        Multimap<String, Change> commit2changes = Multimaps.index(changes, Functions.CHANGE_TO_CONTENTID);
-        CatFileBatchCheckHandler handler = new CatFileBatchCheckHandler(commit2changes.keySet());
-        Command<List<Pair<String, Long>>> cmd = commandFactory.builder(repository).command("cat-file").argument("--batch-check").inputHandler(handler).build(handler);
-        return transform(cmd.call(), this.<String, Change, Long>getFromMap(commit2changes));
-    }
-
-    private <K, T, R> Function<Pair<K, R>, Pair<T, R>> getFromMap(final Multimap<K, T> commit2changes) {
-        return new Function<Pair<K, R>, Pair<T, R>>() {
-            @Override
-            public Pair<T, R> apply(Pair<K, R> input) {
-                return Pair.pair(Iterables.getFirst(commit2changes.get(input.left()), null), input.right());
-            }
-        };
-    }
 }
